# saxophone-intonation-android

./: .gitignore  App.tsx  CHANGELOG.md  README.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: 64-gate1-runbook.md  64-sub-ms-sync-changeset.md  64-ux-read-leg-protocol.md  AUDIT-CAMPAIGN.md  audio-latency-aar.md  test-plan-accuracy-precision.md  v1.2-metronome-design.md  v1.3-council-decisions.md  v1.3-metro-redesign.md  v1.3-state-machine-scrub.md
docs/test-runs/: LEDGER.md
modules/auto-mic-claim/: expo-module.config.json  index.ts  package.json
modules/raw-audio-input/: expo-module.config.json  index.ts  package.json
modules/raw-audio-output/: .gitignore  LICENSE-SF2  README.md  expo-module.config.json  index.ts  package.json
modules/raw-audio-output/android/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  synth.cpp
plugins/: withReleaseSigning.js
scripts/: a4_loopback.sh  avd_test_run.sh  avdkit.sh  gate1_analyze.py  gate1_sweep.sh  gen_brand.py  gen_icon.py  legacy-test-loader.js  legacy-tests.js
src/: audioGen.ts  droneVoices.ts  drumVoices.ts  fft.ts  filterModes.ts  forensicRing.ts  instruments.ts  log.ts  metroHelpers.ts  music.ts  pitchTones.ts  theme.ts  tunerWidgets.tsx  uiShared.tsx  useAudioEngine.ts  useDeck.ts  useDrone.ts  useDronePrefs.ts  useMetronome.ts  useMidiBus.ts  useMidiBusCore.ts  usePitchPipes.ts  useUiPrefsStore.ts  yin.ts
src/__tests__/: aggregation.test.ts  audioGen.test.ts  filterModes.test.ts  forensicRing.test.ts  instruments.test.ts  metroProfiles.test.tsx  metroScheduling.test.tsx  midiBus.test.ts  music.test.ts  pitchTones.test.ts  renderCount.test.tsx  silenceOverWrong.test.ts  storage.test.ts  useDrone.test.ts  useMidiBus.test.ts  yin-fallback.test.ts  yin.test.ts
src/components/: CustomTimeSigPanel.tsx  DrumPicker.tsx  DualPane.tsx  IntonationTable.tsx  PerBeatRow.tsx  PitchPipes.tsx  ProfileEditorAccordion.tsx  ProfileSlotGrid.tsx  RangeEditor.tsx  SubdivisionPicker.tsx  TabBar.tsx  TopPillNav.tsx
src/screens/: DeckScreen.tsx  (+3 more)
(+37 files in other folders)
